--- a/anim/anim-reverse-scrollheight-demo.html
+++ b/anim/anim-reverse-scrollheight-demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Example: Easing Effects on Opacity - YUI Library</title>
+    <title>Example: Reversing Easing Effects on Scrollheight - YUI Library</title>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic">
     <link rel="stylesheet" href="http://yui.yahooapis.com/3.9.0/build/cssgrids/cssgrids-min.css">
     <link rel="stylesheet" href="combo/main-min.css">
